/*
 * Copyright (c) 2024 Pierre-Yves Peton  All Rights Reserved
 */

buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }

}

allprojects {

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }

    apply plugin: 'application'
    apply plugin: 'java'
    apply plugin: 'idea'

    //default gc allows to use GraalVM compiler optimizations
    ext {
        common = ['-dsa',
                  '-server',
                  '-Xms4g',
                  '-Xmx4g', //test heap <4G to exploit zero based compressed oops
                  '-XX:+AlwaysPreTouch',
                  '-XX:+DisableExplicitGC',
                  '-XX:-UseCompressedOops',
                  '-XX:+UnlockDiagnosticVMOptions',
                  '-XX:-LogEvents',
                  '--add-opens',
                  'java.base/jdk.internal.misc=ALL-UNNAMED',
                  '--add-opens',
                  'java.base/sun.nio.ch=ALL-UNNAMED',
                  '--add-opens',
                  'java.base/java.nio=ALL-UNNAMED',
                  '--add-exports',
                  'java.base/jdk.internal.vm.annotation=ALL-UNNAMED',
                  '--enable-native-access=ALL-UNNAMED',
                  '-XX:+UnlockDiagnosticVMOptions',
                  '-XX:+AlwaysPreTouchStacks',
                  '-XX:+OmitStackTraceInFastThrow',
                  '-XX:-RestrictContended',
		          '-XX:-ParallelRefProcEnabled',
                  '-XX:-CheckIntrinsics',
                  '-XX:AutoBoxCacheMax=4096',
                  '-XX:CompileThreshold=40000',
                  '-XX:InlineSmallCode=2048',
                  '-XX:MaxInlineLevel=30',
                  '-XX:MaxInlineSize=500',
                  '-Djava.net.preferIPv4Stack=true',
                  '-Dio.netty.tryReflectionSetAccessible=true',
                  '-Dio.netty.buffer.checkBounds=false',
                  '-Dio.netty.buffer.checkAccessible=false',
                  '-Dio.netty.allocator.useCacheForAllThreads=false',
                  '-Dio.netty.leakDetection.level=disabled',
                  '-Dio.netty.allocator.pageSize=4096',
                  '-Dio.netty.allocator.cacheTrimInterval=131072',
                  '-Dio.netty.recycler.chunkSize=16',
                  '-Dio.netty.recycler.maxCapacityPerThread=2048',
                  '-Dio.netty.recycler.ratio=16',
                  '-Dlog4j2.isWebapp=false',
                  '-Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.BasicAsyncLoggerContextSelector',
                  '-Dlog4j2.enableThreadlocals=true',
                  '-Dlog4j2.enableDirectEncoders=true',
                  '-Dlog4j2.formatMsgAsync=true',
                  '-Dlog4j2.garbagefreeThreadContextMap=true',
                  '-Dlog4j2.clock=CachedClock',
                  '-Dlog4j2.initialReusableMsgSize=128',
                  '-Dlog4j2.maxReusableMsgSize=512',
                  '-Dlog4j2.layoutStringBuilderMaxSize=2048',
                  '-Dlog4j2.unboxRingbufferSize=32',
                  '-DAsyncLogger.SynchronizeEnqueueWhenQueueFull=false',
		         '-Dcom.fixisoft.fix.util.concurrent.FixThreadFactory.loopType=asyncNanoTime',
                  '-XX:+UnlockExperimentalVMOptions',
                  '-XX:+UseCharacterCompareIntrinsics',
                  '-XX:+UseLargePages',
                  '-XX:+UseCopySignIntrinsic',
                  '-XX:+UseSystemMemoryBarrier',
                  '-XX:+UseVectorCmov',
                  '-XX:+UseVectorizedHashCodeIntrinsic',
                  '-XX:MetaspaceSize=64M',
                  '-XX:ConcGCThreads=1',
                  '-XX:CICompilerCount=2',
                  '-Dio.netty.allocator.type=pooled']

        allArgs = common + ['-XX:MaxGCPauseMillis=30']

        configurations.all {
            exclude group: "logback", module: "logback-classic"
            exclude group: "org.slf4j", module: "slf4j-log4j12"
        }
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).all {
        options.compilerArgs += ['--add-exports',
                                 'java.base/jdk.internal.vm.annotation=ALL-UNNAMED',
                                 '--add-exports',
                                 'java.base/jdk.internal.misc=ALL-UNNAMED']
    }

    application {
        applicationDefaultJvmArgs = allArgs
    }

    idea {
        module {
            sourceDirs += file('src/main/java')
            resourceDirs += file('src/main/resources')
        }
    }

}
